# arizona-desert-plants-chat

./: .dockerignore  .env.example  Dockerfile  README.md  arizona-plants-rag-api.md  docker-compose.yml  pyproject.toml
assistant-app/: ArizonaPlantRAG.py  ArizonaPlantVectorStore.py  app.py  rag-test.ipynb  rag.ipynb
data-ingestion/: data-ingestion.ipynb  ingestion.py
data-preparation/: arizona_desert_plants.csv  arizona_desert_plants.json  arizona_desert_plants_clean.json  arizona_plants_unified_20251018.csv  arizona_plants_unified_20251018.json  arizona_plants_unified_20251018.jsonl  data-preparation.ipynb  extension_publications_metadata.json
data-preparation/extension_texts/: Ocotillo.txt  Wildflowers.txt  az1021.txt  az1022.txt  az1048.txt  az1100a.txt  az1110.txt  az1429.txt  az1455.txt  az1624.txt  az1713-2016.txt  az1800-2019.txt  az2021-2023.txt  nopal_final_English.txt
evaluation/: ground_truth_qa.json  rag-evaluator.ipynb  rag_evaluation_results.csv
